Add target column input for regression/classification
Added input field for target column in form.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
           </select>
         </div>
 
+        <label>Target Column (only for regression/classification)</label>
+        <input type="text" name="target_col" placeholder="Example: price">
+
         <button type="submit" class="btn">Start AutoML Process</button>
       </form>
     </div>
